# strota

./: .env.example  .gitignore  .prettierignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.db.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  security.yml
apps/api-python/: .dockerignore  .env.example  Dockerfile  README.md  package.json  pyproject.toml
apps/api-python/src/strota_api/: __init__.py  config.py  db.py  logging.py  main.py
apps/api-python/src/strota_api/auth/: __init__.py  email.py  passwords.py  service.py  tokens.py
apps/api-python/src/strota_api/auth/emails/: magic_link.html  magic_link.subject.txt  magic_link.txt  password_reset.html  password_reset.subject.txt  password_reset.txt  verify_email.html  verify_email.subject.txt  verify_email.txt
apps/api-python/src/strota_api/corpus/: __init__.py  loader.py
apps/api-python/src/strota_api/engine/: __init__.py  bkg_client.py  ratelimit.py  verfahrensfreie.py
apps/api-python/src/strota_api/middleware/: auth.py
apps/api-python/src/strota_api/routes/: auth.py  health.py  internal.py  public.py
apps/api-python/src/strota_api/security/: __init__.py  hmac.py  mtls.py  nonce_store.py
apps/api-python/tests/: test_auth_service.py  test_corpus_load.py  test_engine_verfahrensfreie.py  test_health.py  test_hmac.py  test_middleware_auth.py
apps/web/: .env.example  README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json  (+1 more)
db/: README.md
supabase/: README.md  config.toml
(+131 files in other folders)
